--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 12,
    "id": "d0692027",
    "metadata": {},
    "outputs": [
@@ -18,7 +18,7 @@
     "import requests\n",
     "import html\n",
     "import re # Regular Expression\n",
-    "response = requests.get(\"https://zerojudge.tw/ShowProblem?problemid=a001\")\n",
+    "response = requests.get(\"https://zerojudge.tw/ShowProblem?problemid=q838\")\n",
     "print(f\"Response Code: {response.status_code}\")\n",
     "response.content # 拿 bytes \n",
     "data = response.text # 拿 str\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "id": "2fc14536",
    "metadata": {},
    "outputs": [
@@ -38,8 +38,8 @@
       "Problem title : a001. 哈囉\n",
       "Problem Tags : ['基本輸出輸入']\n",
       "Problem Submission 人數：\n",
-      "通過人數： 115360人\n",
-      "嘗試人數： 126232人 \n",
+      "通過人數： 115378人\n",
+      "嘗試人數： 126251人 \n",
       "通過率： 91%\n",
       "Problem Scoring Method : Tolerant\n",
       "Problem Last Updated : 2020-01-02 11:12\n"
@@ -84,10 +84,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dc1179dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Problem Content :\n",
+      "學習所有程式語言的第一個練習題 \n",
+      "請寫一個程式，可以讀入指定的字串，並且輸出指定的字串。\n",
+      "比如：輸入字串 \"world\", 則請輸出 \"hello, world\"\n",
+      "輸入說明 :\n",
+      "輸入總共一行，內含一組文字\n",
+      "輸出說明 :\n",
+      "輸出題目指定的文字。\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "#內容\n",
@@ -118,26 +134,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4fe498d3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "範例測資 1\n",
+      "Input:\n",
+      "world\n",
+      "Output :\n",
+      "hello, world\n",
+      "範例測資 2\n",
+      "Input:\n",
+      "C++\n",
+      "Output :\n",
+      "hello, C++\n",
+      "範例測資 3\n",
+      "Input:\n",
+      "Taiwan\n",
+      "Output :\n",
+      "hello, Taiwan\n"
+     ]
+    }
+   ],
    "source": [
     "example_case = re.findall(r'<div class=\"problembox\">.*?<pre>(.*?)</pre>', data, re.DOTALL)\n",
     "#print(example_case)\n",
     "for i in range(0, len(example_case), 2):\n",
-    "    print(f\"Input {i//2+1}:\")\n",
+    "    print(f\"範例測資 {i//2+1}\")\n",
+    "    print(f\"Input:\")\n",
     "    print(example_case[i].strip())\n",
-    "    print(f\"Output {i//2+1}:\")\n",
+    "    print(f\"Output :\")\n",
     "    print(example_case[i+1].strip())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5f365bb9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "記憶體限制： 512 MB\n",
+      "| 公開   | 測資點#0      | (33%):   | 1.0s     | <1K    |\n",
+      "| 公開   | 測資點#1      | (33%):   | 1.0s     | <1K    |\n",
+      "| 公開   | 測資點#2      | (34%):   | 1.0s     | <1K    |\n"
+     ]
+    }
+   ],
    "source": [
     "case_info = re.findall(r'<div class=\"panel panel-default\">.*?<div class=\"panel-heading\">測資資訊：</div>.*?<div class=\"panel-body\">(.*?)</div', data, re.DOTALL)[0]\n",
     "case_info = re.sub(r'\\t', '', html.unescape(case_info))\n",
@@ -153,10 +203,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7ff2dad5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "problem hint:\n",
+      "reference : ['Brian Kernighan']\n",
+      "manager :  Elvis0606 (...)\n",
+      "Problem Tags : ['基本輸出輸入']\n"
+     ]
+    }
+   ],
    "source": [
     "div_problem_hint = re.findall(r'<div id=\"problem_hint\" class=\"problembox\">(.*?)</div>', data, re.DOTALL)[0]\n",
     "#print(div_problem_hint)\n",
@@ -179,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "id": "66e17985",
    "metadata": {},
    "outputs": [
@@ -187,11 +248,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| 41123 | Elvis0606                      | (...)                | a001 | python 新手看過來  一看完就懂 (認真想學再進來看) 包含基本的輸入 看完記得給個讚!                  | 6261  | 2024-07-05 22:04 |\n",
-      "| 39197 | tony20070530@gmail.com         | (梁允同)                | a001 | python詳解                                                         | 7748  | 2024-01-22 08:16 |\n",
-      "| 39369 | yuntongliang0@gmail.com        | (105 23梁允同)          | a001 | 程式新手看過來                                                          | 4317  | 2024-02-10 17:43 |\n",
-      "| 38785 | tony20070530@gmail.com         | (梁允同)                | a001 | python教學                                                         | 2620  | 2023-12-23 13:37 |\n",
-      "| 38783 | tony20070530@gmail.com         | (梁允同)                | a001 | C++教學                                                            | 6557  | 2023-12-23 13:35 |\n"
+      "| 編號    | 身分                             | 姓名                   | 題目ID | 文章標題                                                             | 人氣    | 發表日期             |\n",
+      "| ----- | ------------------------------ | -------------------- | ---- | ---------------------------------------------------------------- | ----- | ---------------- |\n",
+      "| 46327 | xfan0968@gmail.com             | (呱呱呱)                | q838 | 線段樹                                                              | 442   | 2025-06-15 21:47 |\n",
+      "| 46321 | youanchen725@gmail.com         | (youanc)             | q838 | 解題思路                                                             | 597   | 2025-06-15 19:29 |\n",
+      "| 46444 | guovinn@gmail.com              | (郭10)                | q838 | C++解法(單調棧)                                                       | 632   | 2025-06-24 12:01 |\n",
+      "| 46322 | algo.seacow@gmail.com          | (演算法海牛)              | q838 | 最佳解                                                              | 573   | 2025-06-15 19:54 |\n",
+      "| 46450 | leeguanhan0909@gmail.com       | (李冠翰)                | q838 | C++ 詳解(priority_queue+set)                                       | 129   | 2025-06-24 19:29 |\n"
      ]
     }
    ],
@@ -206,6 +269,8 @@
     "    print('沒有發現任何「解題報告」')\n",
     "else:\n",
     "    # 每個tr底下有6個td，分別是 [編號,身分,題目,主題,人氣,發表日期]\n",
+    "    print(fmt2.format(\"編號\", \"身分\", \"姓名\", \"題目ID\", \"文章標題\", \"人氣\", \"發表日期\"))\n",
+    "    print(fmt2.format(\"-\"*5, \"-\"*30, \"-\"*20, \"-\"*4, \"-\"*64, \"-\"*5, \"-\"*16))\n",
     "    for i in tbody[1:]:\n",
     "        tr = re.findall(r'<td.*?>(.*?)</td>', i, re.DOTALL)\n",
     "        number = tr[0].strip()\n",
@@ -216,18 +281,6 @@
     "        popularity = tr[4].strip()\n",
     "        time = tr[5].strip()\n",
     "        print(fmt2.format(number, email, name, problem_id, articletitle, popularity, time))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e34ebc0a",
-   "metadata": {},
-   "source": [
-    "| 41045 | glps1004@gmail.com             | (Ian)                | j608 | APCS 202301解                                                     | 431   | 2024-06-28 11:49 |\n",
-    "| 37432 | a110608@ctes.ylc.edu.tw        | (鍾均)                 | j608 | C++ &amp; Python 雙題解！(附完整解題過程&amp;程式碼) (有40%解與AC解)               | 1132  | 2023-09-08 11:50 |\n",
-    "| 36787 | fire5386                       | (becaidorz)          | j608 | 題解+類似題                                                           | 765   | 2023-08-08 15:12 |\n",
-    "| 36052 | course@wiseai.me               | (Course WiseAI)      | j608 | Python解                                                          | 722   | 2023-07-01 23:46 |\n",
-    "| 35423 | alen24816@gmail.com            | (AlenLU)             | j608 | python 14行AC(0.7s)                                               | 695   | 2023-06-01 22:10 |"
    ]
   }
  ],
